# bowshock

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CREDITS.txt  README.md  README.txt  bowshock.desktop  extractGlad.sh  glad.CMakeLists.txt  install.sh  procyon.desktop  validateShaders.py
bowshock/: CMakeLists.txt  GNUmakefile
bowshock/include/bow/: application.hxx  bas.hxx  base.hxx  bs.h  bs.hxx  c2x.h  client.hxx  gfx.h  info.h  ini.hxx  init.h  init.hxx  lgc.h  lgc.hxx  logic.hxx  network.hxx  run.h  run.hxx  runtime.hxx  sav.h  sav.hxx  save.hxx  server.hxx
bowshock/shader/: main.frag.glsl  main.vert.glsl
bowshock/source/: main.cxx
bowshock/source/application/Application/: constructor.cxx  destructor.cxx  get_quote.cxx  initialise_signal.cxx  parse_parameters.cxx  print_credits.cxx  print_help.cxx  run.cxx
bowshock/source/application/bow/: check_parameters.cxx  compile_shader_program.cxx  configure.cxx  destructor.cxx  get_quote.cxx  initialise_graphics.cxx  initialise_random.cxx  initialise_signal.cxx  loop.cxx  poll_events.cxx  print_credits.cxx  print_help.cxx  print_quote.cxx  run.cxx  start_sequence.cxx
bowshock/source/base/: base_directory.cxx  home_directory.cxx  log.cxx  object_type_string.cxx  random.cxx  save_path.cxx  terminate.cxx
bowshock/source/bs/: abrt.c  chkparams.c  gendat.c  getquot.c  getsavpth.c  help.c  init.c  initdat.c  initrnd.c  initsig.c  intro.c  loop.c  objTypStr.c  objTypStr.cxx  objtypstr.cxx  quit.c  rnd.c  rnd.cxx
bowshock/source/client/Client/: constructor.cxx  destructor.cxx  loop.cxx  poll_events.cxx  run.cxx  save_path.cxx  start_sequence.cxx
bowshock/source/client/PlayerData/: constructor.cxx  decode_save.cxx  encode_save.cxx  load.cxx  read_file.cxx  save.cxx  write_file.cxx
bowshock/source/client/Renderer/: constructor.cxx  destructor.cxx  render.cxx
bowshock/source/client/ShaderProgram/: compile_shader.cxx  constructor.cxx  destructor.cxx
bowshock/source/gfx/: drw.c  initgfx.c
bowshock/source/info/: objtypstr.c  shipmass.c
bowshock/source/ini/bow/: chkpar.cxx  cmpshd.cxx  cmpshdprg.cxx  crd.cxx  exi.cxx  getquo.cxx  getsavpth.cxx  hlp.cxx  ini.cxx  inigfx.cxx  inirnd.cxx  inisig.cxx  lop.cxx  polevt.cxx  pricrd.cxx  priquo.cxx  srtseq.cxx
bowshock/source/init/: chkParams.c  compShd.c  compShdProg.c  cred.c  getQuot.c  getSavPth.c  help.c  init.c  initGfx.c  initRnd.c  initSig.c  priQuot.c
bowshock/source/init/bow/: bow.cxx  chkParams.cxx  compShd.cxx  compShdProg.cxx  cred.cxx  getQuot.cxx  getSavPth.cxx  help.cxx  init.cxx  initGfx.cxx  initRnd.cxx  initSig.cxx  intro.cxx  loop.cxx  pollEvts.cxx  priQuot.cxx  quit.cxx
bowshock/source/lgc/: addobj.c  freeobjs.c  gensys.c  grav.c  grav.cxx  grv.cxx  mov.cxx  mv.c  mv.cxx  objtypstr.c  shipMass.c  shipMass.cxx  shipmass.c  shpmas.cxx  sim.c  sim.cxx
bowshock/source/logic/: gravitate.cxx  hull_mass.cxx  move.cxx  ship_mass.cxx  simulate.cxx  ware_density.cxx  ware_mass.cxx
bowshock/source/logic/Canister/: constructor.cxx  object_type_string.cxx
bowshock/source/logic/Object/: object_type_string.cxx
bowshock/source/logic/Ship/: constructor.cxx  net_mass.cxx  object_type_string.cxx
bowshock/source/logic/Star/: constructor.cxx  object_type_string.cxx
bowshock/source/logic/Station/: constructor.cxx  object_type_string.cxx
bowshock/source/logic/World/: constructor.cxx  object_type_string.cxx
bowshock/source/run/: abr.cxx  abrt.c  abrt.cxx  addObj.c  addObj.cxx  addobj.cxx  freeObjs.c  freeObjs.cxx  genSys.c  genSys.cxx  gensys.cxx  intro.c  loop.c  pollEvts.c  quit.c  remobj.cxx
bowshock/source/runtime/: add_object.cxx  delete_objects.cxx  generate_system.cxx
bowshock/source/sav/: cnt.cxx  cont.c  cont.cxx  decSav.c  decSav.cxx  decsav.cxx  encSav.c  encSav.cxx  encsav.cxx  genDat.c  genDat.cxx  gendat.c  gendat.cxx  new.c  newSav.cxx  newsav.cxx  rstart.c  sav.c  sav.cxx
bowshock/source/save/: continue_save.cxx  decode_save.cxx  encode_save.cxx  generate_data.cxx  new_save.cxx  save.cxx
bowshock/source/server/ObjectIterator/: constructor.cxx  operator_equality.cxx  operator_increment.cxx
bowshock/source/server/ObjectRoot/: add.cxx  begin.cxx  constructor.cxx  destructor.cxx  end.cxx  operator_increment.cxx
bowshock/source/server/Server/: destructor.cxx  start.cxx
bowshock/source/server/ServerInstance/: add_object.cxx  constructor.cxx  delete_objects.cxx  generate_system.cxx  gravitate.cxx  loop.cxx  move.cxx  run.cxx  simulate.cxx
procyon/: GNUmakefile
procyon/include/acm/: bs.h  evt.h  gfx.h  info.h  sav.h
procyon/source/: main.c
procyon/source/bs/: cont.c  dbglog.c  exit.c  init.c  sav.c  shipnm.c
procyon/source/evt/: jmp.c
procyon/source/gfx/: initgfx.c
procyon/source/info/: jmplen.c  sysdist.c
procyon/source/sav/: cont.c  sav.c
